added previous and next

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<img id="3" src="images/sports-shoes.jpg" />
 	</div>
 	
-	<a href="#" class="left" onclick="prev(); return false;">Tilbage</a>
-	<a href="#" class="right"onclick="next(); return false">Frem</a>	
+	<a href="#" class="left" onclick="prev(); return false;">Previous</a>
+	<a href="#" class="right"onclick="next(); return false">Next</a>	
 </div>
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
